tests/errors/macro/parser_unexpected_grid/alone_grid.c
int a = 0; 
a = 1; # a--;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
